# CppCMakeTemplate

./: README.md
code/: CMakeLists.txt
code/MyProjectName/: CMakeLists.txt  example.cpp  example.hpp  example.t.cpp
